// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper Snapshots All 1`] = `
<div
  className="sc-AxjAm fJpNdI className"
  size="large"
>
  <p>
    Body
  </p>
</div>
`;

exports[`Wrapper Snapshots No props 1`] = `
<div
  className="sc-AxjAm fCsoZh"
  size="large"
>
  <p>
    Body
  </p>
</div>
`;

exports[`Wrapper Snapshots breakout 1`] = `
<div
  className="sc-AxjAm fJpNdI"
  size="large"
>
  <p>
    Body
  </p>
</div>
`;

exports[`Wrapper Snapshots className 1`] = `
<div
  className="sc-AxjAm fCsoZh className"
  size="large"
>
  <p>
    Body
  </p>
</div>
`;

exports[`Wrapper Snapshots size 1`] = `
<div
  className="sc-AxjAm fCsoZh"
  size="large"
>
  <p>
    Body
  </p>
</div>
`;

exports[`Wrapper Snapshots size full 1`] = `
<div
  className="sc-AxjAm gwBBxQ"
  size="full"
>
  <p>
    Body
  </p>
</div>
`;
